ingress-example-2/svc-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nginx-ingress
  name: ingress
  namespace: ingress-space
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
  selector:
    name: nginx-ingress
  type: NodePort
